# rust-bittorrent-client

./: .gitignore  Cargo.toml  Untitled 2.txt  Untitled.txt  readme.md
libowfat/: ent  entities.h  havekqueue.h  havepread.h  t
libowfat/CVS/: Entries
libowfat/array/CVS/: Entries
libowfat/buffer/CVS/: Entries
libowfat/byte/CVS/: Entries
libowfat/case/CVS/: Entries
libowfat/cdb/CVS/: Entries
libowfat/critbit/CVS/: Entries
libowfat/dns/CVS/: Entries
libowfat/ent.dSYM/Contents/: Info.plist
libowfat/ent.dSYM/Contents/Resources/DWARF/: ent
libowfat/fmt/CVS/: Entries
libowfat/io/CVS/: Entries
libowfat/mmap/CVS/: Entries
libowfat/mult/CVS/: Entries
libowfat/open/CVS/: Entries
libowfat/scan/CVS/: Entries
libowfat/socket/CVS/: Entries
libowfat/str/CVS/: Entries
libowfat/stralloc/CVS/: Entries
libowfat/tai/CVS/: Entries
libowfat/taia/CVS/: Entries
libowfat/test/CVS/: Entries
libowfat/textcode/CVS/: Entries
libowfat/uint/CVS/: Entries
libowfat/unix/CVS/: Entries
src/: lib.rs  main.rs
src/bittorrent/: Metainfo.rs  Peer.rs  PeerManager.rs  Trackers.rs  bedecoder.rs  bedecoder_nom.rs  bencoder.rs  manager.rs  metainfo.rs  mod.rs  peer.rs  timers.rs  torrent.rs  torrent_runtime.rs  tracker.rs  utils.rs
src/client/: client.rs  mod.rs  table.rs
test/: bible.torrent  torrent.torrent
test/test_read/invalid_torrent/torrent/: file0.text
test/test_write/test_send_receive/torrent/: file0.text
