[package]
name = "rust-bittorrent-client"
version = "0.1.0"
authors = ["Luke Olney <LukeOlney2016@u.northwestern.edu>"]

[dependencies]
byteorder = "1.1.0"
priority-queue = "0.4.5"
bit-vec = "0.4.4"
log = "0.4"
env_logger = "*"
sha1 = "0.2.0"
rand = "0.4"
futures = "0.1.18"
tokio-core = "0.1.5"
hyper = "0.11.22"
url = "1.7.0"   
cursive = { version = "0.7", default-features = false }
cursive_table_view = "0.4.2"
futures-await = "0.1"
serde = "1.0.3"
serde_derive = "1.0"

[lib]
name = "bittorrent"
path = "src/lib.rs"

[[bin]]
name = "rust-bittorrent-client"
path = "src/main.rs"
