[package]
name = "rust-bittorrent-client"
version = "0.1.0"
authors = ["Luke Olney <lukeolney@gmail.com>"]

[dependencies]
byteorder = "1.1.0"
priority-queue = "0.5.2"
bit-vec = "0.4.4"
log = "0.4"
env_logger = "*"
sha1 = "0.2.0"
rand = "0.4"
futures = "0.1.25"
tokio = "0.1.3"
tokio-timer = "0.2.3"
hyper = "0.12.17"
url = "1.7.0"   
cursive = { version = "0.7", default-features = false }
cursive_table_view = "0.4.2"
serde = "1.0.80"
serde_derive = "1.0.80"
hex = "0.2.0"
http = "0.1.14"

rocket = "0.4.0-rc.2"
rocket_codegen = "0.4.0-rc.2"
rocket_contrib = "0.4.0-rc.2"
rocket_cors = "0.4.0-rc.2"

[lib]
name = "bittorrent"
path = "src/lib.rs"

[[bin]]
name = "rust-bittorrent-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "rust-bittorrent-webserver"
path = "src/bin/webserver/main.rs"
